# bufreaderwriter-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  lib.rs.bak  rand.rs  seq.rs
