[package]
name = "bufreaderwriter"
version = "0.2.1"
authors = ["github.com/alemigo"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust convenience structs that facilitate automatic switching between buffered reading and writing from a single underlying IO instance.  BufReaderWriterRand for random IO and BufReaderWriterSeq for sequential IO."
documentation = "https://docs.rs/bufreaderwriter"
readme = "README.md"
repository = "https://github.com/alemigo/bufreaderwriter-rs"
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tempfile = "3.1.0"

